--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,11 @@
+# Used by Prisma:
+#   url = env("POSTGRES_PRISMA_URL") // uses connection pooling
+#   directUrl = env("POSTGRES_URL_NON_POOLING") // uses a direct connection
+#   shadowDatabaseUrl = env("POSTGRES_URL_NON_POOLING") // used for migrations
+
 # Create a Postgres database on Vercel: https://vercel.com/postgres
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+POSTGRES_PRISMA_URL= 
+POSTGRES_URL_NON_POOLING= 
 
 # Generate one here: https://generate-secret.vercel.app/32 (only required for localhost)
 NEXTAUTH_SECRET=
