--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19",
     "typescript": "4.5.5"
   }
 }
