--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "5.1.1",
     "@vercel/analytics": "^1.0.2",
     "next": "13.4.19",
     "prisma": "^5.1.1",
