--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "deploy": "git add . && git commit -m 'Build' && git push",
     "dev": "next",
     "build": "next build",
+    "postinstall": "prisma generate",
     "start": "next start"
   },
   "keywords": [],
