--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@vercel/analytics": "^1.0.2",
     "next": "13.4.19",
+    "next-auth": "4",
     "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
