--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next",
     "build": "prisma generate && next build",
     "postinstall": "prisma generate",
+    "pushdb": "npx prisma db push",
     "start": "next start"
   },
   "keywords": [],
