--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-auth": "4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "8.0.7"
+    "react-markdown": "8.0.7",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "20.5.4",
