--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "8.0.7",
+    "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
